fix: update datatable td border color for dark mode support

--- a/src/app/views/pages/home/home.css
+++ b/src/app/views/pages/home/home.css
@@ -20,7 +20,7 @@
 
 .profile-table .p-datatable-tbody>tr>td {
     border: none !important;
-    border-bottom: 1px solid var(--color-border) !important;
+    border-bottom: 1px solid #2E2E2E !important;
 }
 
 .profile-table .p-paginator {
